--- a/style.css
+++ b/style.css
@@ -326,6 +326,8 @@ body.dark {
     .background-image {
         background-image: url(./images/bg-desktop-light.jpg);
         width: 90%;
+        height: 300px;
+        background-repeat: no-repeat;
     }
 
     .background-emptyplace {
@@ -345,6 +347,7 @@ body.dark {
 
     .app form {
         margin-top: 10%;
+        height: 50px;
     }
 
     .darkIcon {
@@ -427,17 +430,36 @@ body.dark {
     }
 }
 
-@media (max-width:360px) {
+@media (max-width:420px) {
+    .background-image {
+
+        height: 250px;
+        background-repeat: no-repeat;
+    }
+
+    .app form {
+        height: 50px;
+
+    }
+}
+
+@media (max-width:375px) {
     body {
         max-width: 100vw;
     }
 
     .background-image {
         width: 100vw;
+        height: 240px;
     }
 
     .background-emptyplace {
         width: 100vw;
+    }
+
+    .app form {
+        height: 42px;
+
     }
 }
 
@@ -448,9 +470,15 @@ body.dark {
 
     .background-image {
         width: 100vw;
+        height: 220px;
     }
 
     .background-emptyplace {
         width: 100vw;
+    }
+
+    .app form {
+        height: 42px;
+
     }
 }
